--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <a href="fonttest.html">Font Test</a>
+<hr>
+<p>This page is in the public domain. See <a href="https://github.com/FishlandicFishy/cjk-utils">the GitHub repository</a>.</p>
