--- a/fonttest.html
+++ b/fonttest.html
@@ -218,7 +218,7 @@
         [K*|G*] Scriptwide Sans | <span id="fontScrw"></span>
     </div>
     <hr>
-    <p>This page is in the public domain. All fonts used are licensed under the OFL.</p>
+    <p>This page is in the public domain. All fonts used are licensed under the OFL. See <a href="https://github.com/FishlandicFishy/cjk-utils">the GitHub repository</a>.</p>
     <p><a href="https://github.com/orioncactus/pretendard">Pretendard (body font)</a> | <a href="https://github.com/unicode-org/last-resort-font">Last Resort (fallback font)</a> | <a href="https://github.com/adobe-fonts/source-han-sans">Source Han Sans</a> | <a href="https://github.com/MoonlitOwen/ChocolateSans">Chocolate Classical Sans</a> | <a href="https://booth.pm/ja/items/2117070">Sukima Gothic</a> | <a href="https://github.com/TKYKmori/Gothic-Nguyen">Gothic Nguyen</a> | <a href="https://chiron-fonts.github.io/">Chiron Hei HK</a> | <a href="https://github.com/takushun-wu/WenYuanFonts">WenYuan Gothic</a> | <a href="https://github.com/Steve-Yuu/Yuu-Gothic">Yuu-Gothic</a> | <a href="https://github.com/ChiuMing-Neko/ChiuKongGothic">ChiuKong Gothic</a> | <a href="https://github.com/GuiWonder/Shanggu">Shanggu Sans</a> | <a href="https://github.com/MoneMizuno/Genne-Gothic">Genne Gothic</a> | <a href="https://github.com/Fitzgerald-Porthmouth-Koenigsegg/Plangothic_Project">Plangothic</a> | <a href="https://github.com/scriptwide-fonts/scriptwide-sans-cjk">Scriptwide Sans</a></p>
     <script>
         const textInput = document.getElementById('textInput');
