Removed fonts, added second testing page
Fonts no longer provided (except for Last Resort), added testing page for Klee One-derived fonts

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<a href="fonttest.html">Font Test</a>
+<a href="fonttest.html">Font Test (Source Han Sans-based)</a><br>
+<a href="klfonttest.html">Font Test (Klee One-based)</a><br>
 <hr>
 <p>This page is in the public domain. See <a href="https://github.com/FishlandicFishy/cjk-utils">the GitHub repository</a>.</p>
