--- a/klfonttest.html
+++ b/klfonttest.html
@@ -88,10 +88,10 @@
     <div class="font-display" style="font-family: 'LXGW WenKai GB','Last Resort';">
         [I] LXGW WenKai GB | <span id="fontWg"></span>
     </div>
-    <div class="font-display" style="font-family: 'Plan Kai A JP','Plan Kai B JP','Plan Kai G JP','Klee One SemiBold','LXGW WenKai TC','LXGW WenKai','Last Resort';">
+    <div class="font-display" style="font-family: 'Plan Kai A JP','Plan Kai B JP','Plan Kai G JP','Last Resort';">
         [J] PlanKai JP | <span id="fontPj"></span>
     </div>
-    <div class="font-display" style="font-family: 'Plan Kai A SC','Plan Kai B SC','Plan Kai G SC','LXGW WenKai GB','Last Resort';">
+    <div class="font-display" style="font-family: 'Plan Kai A SC','Plan Kai B SC','Plan Kai G SC','Last Resort';">
         [G] PlanKai SC | <span id="fontPg"></span>
     </div>
     <hr>
