Added Sukima SUB and removed CJK SC fallback from Plangothic

--- a/fonttest.html
+++ b/fonttest.html
@@ -67,7 +67,7 @@
     <div class="font-display" style="font-family: 'Chocolate Classical Sans','Last Resort';">
         [I] Chocolate CL | <span id="fontChoc"></span>
     </div>
-    <div class="font-display" style="font-family: 'Sukima Gothic','Last Resort';">
+    <div class="font-display" style="font-family: 'Sukima Gothic','Sukima Gothic SUB','Last Resort';">
         [J] Sukima Gothic | <span id="fontSukima"></span>
     </div>
     <div class="font-display" style="font-family: 'Gothic Nguyen','Last Resort';">
@@ -91,7 +91,7 @@
     <div class="font-display" style="font-family: 'Genne Gothic','Last Resort';">
         [I] Genne Gothic | <span id="fontGenne"></span>
     </div>
-    <div class="font-display" style="font-family: 'Plangothic P1', 'Plangothic P2','Noto Sans CJK SC','Last Resort';">
+    <div class="font-display" style="font-family: 'Plangothic P1', 'Plangothic P2','Last Resort';">
         [G] Plangοthic | <span id="fontPlan"></span>
     </div>
     <div class="font-display" style="font-family: 'ScriptwideSansCJK-A', 'ScriptwideSansCJK-B','ScriptwideSansCJK-C','Last Resort';">
