Removed spoofing variant of Plangothic
Makes it seem more like an advertisement now but it's better than a Last Resort glyph for the Greek omicron

--- a/fonttest.html
+++ b/fonttest.html
@@ -92,7 +92,7 @@
         [I] Genne Gothic | <span id="fontGenne"></span>
     </div>
     <div class="font-display" style="font-family: 'Plangothic P1', 'Plangothic P2','Last Resort';">
-        [G] Plangοthic | <span id="fontPlan"></span>
+        [G] Plangothic | <span id="fontPlan"></span>
     </div>
     <div class="font-display" style="font-family: 'ScriptwideSansCJK-A', 'ScriptwideSansCJK-B','ScriptwideSansCJK-C','Last Resort';">
         [K*|G*] Scriptwide Sans | <span id="fontScrw"></span>
