--- a/klfonttest.html
+++ b/klfonttest.html
@@ -88,6 +88,9 @@
     <div class="font-display" style="font-family: 'LXGW WenKai GB','Last Resort';">
         [I] LXGW WenKai GB | <span id="fontWg"></span>
     </div>
+    <div class="font-display" style="font-family: 'Astalia','Last Resort';">
+        [J|T] Astalia | <span id="fontAs"></span>
+    </div>
     <div class="font-display" style="font-family: 'Plan Kai A JP','Plan Kai B JP','Plan Kai G JP','Last Resort';">
         [J] PlanKai JP | <span id="fontPj"></span>
     </div>
@@ -95,7 +98,7 @@
         [G] PlanKai SC | <span id="fontPg"></span>
     </div>
     <div class="font-display" style="font-family: 'ScriptwideKyokashoCJK-A','ScriptwideKyokashoCJK-B','Last Resort';">
-        [C] Scriptwide Kyokasho CJK | <span id="fontSc"></span>
+        [I] Scriptwide Kyokasho CJK | <span id="fontSc"></span>
     </div>
     <hr>
     <p>This page is in the public domain. All fonts used are licensed under the OFL. See <a href="https://github.com/FishlandicFishy/cjk-utils">the GitHub repository</a>.</p>
@@ -114,6 +117,7 @@
         const fontMs = document.getElementById('fontMs');
         const fontIa = document.getElementById('fontIa');
         const fontHy = document.getElementById('fontJy');
+        const fontAs = document.getElementById('fontAs');
         const fontPj = document.getElementById('fontPj');
         const fontPg = document.getElementById('fontPg');
         const fontSc = document.getElementById('fontSc');
@@ -132,6 +136,7 @@
             fontYs.textContent = inputText;
             fontIa.textContent = inputText;
             fontJy.textContent = inputText;
+            fontAs.textContent = inputText;
             fontPj.textContent = inputText;
             fontPg.textContent = inputText;
             fontSc.textContent = inputText;
