--- a/klfonttest.html
+++ b/klfonttest.html
@@ -86,7 +86,7 @@
         [H] JyunsaiKaai | <span id="fontJy"></span>
     </div>
     <div class="font-display" style="font-family: 'LXGW WenKai GB','Last Resort';">
-        [I] LXGW WenKai GB | <span id="fontWg"></span>
+        [G] LXGW WenKai GB | <span id="fontWg"></span>
     </div>
     <div class="font-display" style="font-family: 'Astalia','Last Resort';">
         [J|T] Astalia | <span id="fontAs"></span>
