--- a/klfonttest.html
+++ b/klfonttest.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="input-container">
-        <input type="text" id="textInput" placeholder="Type something..." style="font-family:'Klee One Semibold','LXGW WenKai TC','LXGW WenKai','Plan Kai A JP','Plan Kai B JP','Plan Kai G JP','Iansui','JyunsaiKaai','WenKai_MSARG','LXGW WenKai GB'"/>
+        <input type="text" id="textInput" placeholder="Type something..." style="font-family:'ScriptwideKyokashoCJK-A','ScriptwideKyokashoCJK-B','Klee One Semibold','LXGW WenKai TC','LXGW WenKai','Plan Kai A JP','Plan Kai B JP','Plan Kai G JP','Iansui','JyunsaiKaai','WenKai_MSARG','LXGW WenKai GB'"/>
         <div class="uniInput">
           <input type="text" id="unicodeInput" placeholder="4e00" style="font-family:monospace;" />
         </div>
