--- a/klfonttest.html
+++ b/klfonttest.html
@@ -85,6 +85,9 @@
     <div class="font-display" style="font-family: 'JyunsaiKaai','Last Resort';">
         [H] JyunsaiKaai | <span id="fontJy"></span>
     </div>
+    <div class="font-display" style="font-family: 'Pengli WenKai','Last Resort';">
+        [G] Pengli WenKai | <span id="fontPl"></span>
+    </div>
     <div class="font-display" style="font-family: 'LXGW WenKai GB','Last Resort';">
         [G] LXGW WenKai GB | <span id="fontWg"></span>
     </div>
@@ -117,6 +120,7 @@
         const fontMs = document.getElementById('fontMs');
         const fontIa = document.getElementById('fontIa');
         const fontHy = document.getElementById('fontJy');
+        const fontPl = document.getElementById('fontPl');
         const fontAs = document.getElementById('fontAs');
         const fontPj = document.getElementById('fontPj');
         const fontPg = document.getElementById('fontPg');
@@ -136,6 +140,7 @@
             fontYs.textContent = inputText;
             fontIa.textContent = inputText;
             fontJy.textContent = inputText;
+            fontPl.textContent = inputText;
             fontAs.textContent = inputText;
             fontPj.textContent = inputText;
             fontPg.textContent = inputText;
