--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <a href="fonttest.html">Font Test (Source Han Sans-based)</a><br>
 <a href="klfonttest.html">Font Test (Klee One-based)</a><br>
+<a href="mjfonttest.html">Font Test (IPAmjMincho-based)</a><br>
 <hr>
 <p>This page is in the public domain. See <a href="https://github.com/FishlandicFishy/cjk-utils">the GitHub repository</a>.</p>
