--- a/klfonttest.html
+++ b/klfonttest.html
@@ -73,6 +73,15 @@
     <div class="font-display" style="font-family: 'YShiNewPen-Shuti','Last Resort';">
         [I] YShiNewPen-Shuti | <span id="fontYs"></span>
     </div>
+    <div class="font-display" style="font-family: 'YShiPen-ShutiCl','Last Resort';">
+        [I] YShiPen-ShutiCl | <span id="fontYc"></span>
+    </div>
+    <div class="font-display" style="font-family: 'YShiPen-ShutiCl S','Last Resort';">
+        [I] YShiPen-ShutiCl S | <span id="fontYl"></span>
+    </div>
+    <div class="font-display" style="font-family: 'YShiPen-ShutiTC','Last Resort';">
+        [I] YShiPen-ShutiTC | <span id="fontYt"></span>
+    </div>
     <div class="font-display" style="font-family: 'Moon Stars Kai','Last Resort';">
         [I] Moon Stars Kai | <span id="fontMs"></span>
     </div>
@@ -87,6 +96,9 @@
     </div>
     <div class="font-display" style="font-family: 'Pengli WenKai','Last Resort';">
         [G] Pengli WenKai | <span id="fontPl"></span>
+    </div>
+    <div class="font-display" style="font-family: 'BR Wakaisho','Last Resort';">
+        [A] BR Wakaisho | <span id="fontWa"></span>
     </div>
     <div class="font-display" style="font-family: 'LXGW WenKai GB','Last Resort';">
         [G] LXGW WenKai GB | <span id="fontWg"></span>
@@ -103,9 +115,15 @@
     <div class="font-display" style="font-family: 'ScriptwideKyokashoCJK-A','ScriptwideKyokashoCJK-B','Last Resort';">
         [I] Scriptwide Kyokasho CJK | <span id="fontSc"></span>
     </div>
+    <div class="font-display" style="font-family: 'LXGW ZhenKai GB','Last Resort';">
+        [G] LXGW ZhenKai GB | <span id="fontZG"></span>
+    </div>
+    <div class="font-display" style="font-family: 'LXGW ZhenKai','Last Resort';">
+        [I] LXGW ZhenKai | <span id="fontZI"></span>
+    </div>
     <hr>
     <p>This page is in the public domain. All fonts used are licensed under the OFL. See <a href="https://github.com/FishlandicFishy/cjk-utils">the GitHub repository</a>.</p>
-    <p><a href="https://github.com/orioncactus/pretendard">Pretendard (body font)</a> | <a href="https://github.com/unicode-org/last-resort-font">Last Resort (fallback font)</a> | <a href="https://fonts.google.com/specimen/Klee+One">Klee One</a> | <a href="https://github.com/lxgw/LxgwWenKai">LXGW WenKai</a> (<a href="https://github.com/lxgw/LxgwWenkaiTC">TC</a>, <a href="https://github.com/lxgw/LxgwWenkaiGB">GB</a>) <a href="https://github.com/lxgw/Pengli">Pengli</a> | <a href="https://github.com/Steve-Yuu/YshiPen-Shuti">YshiPen-Shuti</a> | <a href="https://github.com/GuiWonder/MoonStarsKai">Moon Stars Kai</a> | <a href="https://github.com/buwuzhengyedexiaoji/WenKai_MSARG">WenKai_MSARG</a> | <a href="https://github.com/ButTaiwan/iansui">Iansui</a> | <a href="https://github.com/ItMarki/jyunsaikaai">JyunsaiKaai</a> | <a href="https://github.com/Des-Magmeta/PlanKai">PlanKai</a> | <a href="https://github.com/scriptwide-fonts/scriptwide-kyokasho-cjk">Scriptwide Kyokasho CJK</a></p>
+    <p><a href="https://github.com/orioncactus/pretendard">Pretendard (body font)</a> | <a href="https://github.com/unicode-org/last-resort-font">Last Resort (fallback font)</a> | <a href="https://fonts.google.com/specimen/Klee+One">Klee One</a> | <a href="https://github.com/lxgw/LxgwWenKai">LXGW WenKai</a> (<a href="https://github.com/lxgw/LxgwWenkaiTC">TC</a>, <a href="https://github.com/lxgw/LxgwWenkaiGB">GB</a>) | <a href="https://github.com/lxgw/LxgwZhenKai">LXGW ZhenKai</a> | <a href="https://github.com/lxgw/Pengli">Pengli</a> | <a href="https://github.com/Steve-Yuu/YshiPen-Shuti">YshiPen-Shuti</a> | <a href="https://github.com/GuiWonder/MoonStarsKai">Moon Stars Kai</a> | <a href="https://github.com/buwuzhengyedexiaoji/WenKai_MSARG">WenKai_MSARG</a> | <a href="https://github.com/ButTaiwan/iansui">Iansui</a> | <a href="https://github.com/ItMarki/jyunsaikaai">JyunsaiKaai</a> | <a href="https://github.com/Des-Magmeta/PlanKai">PlanKai</a> | <a href="https://github.com/scriptwide-fonts/scriptwide-kyokasho-cjk">Scriptwide Kyokasho CJK</a></p>
     <script>
         const textInput = document.getElementById('textInput');
         const unicodeInput = document.getElementById('unicodeInput');
@@ -116,7 +134,13 @@
         const fontWt = document.getElementById('fontWt');
         const fontWg = document.getElementById('fontWg');
         const fontWm = document.getElementById('fontWm');
+        const fontWa = document.getElementById('fontWa');
+        const fontZG = document.getElementById('fontZG');
+        const fontZI = document.getElementById('fontZI');
         const fontYs = document.getElementById('fontYs');
+        const fontYc = document.getElementById('fontYc');
+        const fontYl = document.getElementById('fontYl');
+        const fontYt = document.getElementById('fontYt');
         const fontMs = document.getElementById('fontMs');
         const fontIa = document.getElementById('fontIa');
         const fontHy = document.getElementById('fontJy');
@@ -136,8 +160,14 @@
             fontWt.textContent = inputText;
             fontWg.textContent = inputText;
             fontWm.textContent = inputText;
+            fontWa.textContent = inputText;
+            fontZI.textContent = inputText;
+            fontZG.textContent = inputText;
             fontMs.textContent = inputText;
             fontYs.textContent = inputText;
+            fontYc.textContent = inputText;
+            fontYl.textContent = inputText;
+            fontYt.textContent = inputText;
             fontIa.textContent = inputText;
             fontJy.textContent = inputText;
             fontPl.textContent = inputText;
