--- a/klfonttest.html
+++ b/klfonttest.html
@@ -119,7 +119,7 @@
         [G] LXGW ZhenKai GB | <span id="fontZG"></span>
     </div>
     <div class="font-display" style="font-family: 'LXGW ZhenKai','Last Resort';">
-        [I] LXGW ZhenKai | <span id="fontZI"></span>
+        [J|G] LXGW ZhenKai | <span id="fontZI"></span>
     </div>
     <hr>
     <p>This page is in the public domain. All fonts used are licensed under the OFL. See <a href="https://github.com/FishlandicFishy/cjk-utils">the GitHub repository</a>.</p>
