--- a/klfonttest.html
+++ b/klfonttest.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Font Display Test</title>
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
+    />
     <style>
-        @font-face {
-          font-family: "Pretendard";
-          src:
-            local("Pretendard"),
-            url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/woff2/PretendardStdVariable.woff2") format("woff2");
-        }
         @font-face {
           font-family: "Last Resort";
           src:
