long overdue update

--- a/klfonttest.html
+++ b/klfonttest.html
@@ -70,6 +70,18 @@
     <div class="font-display" style="font-family: 'LXGW WenKai TC','Last Resort';">
         [I] LXGW WenKai TC | <span id="fontWt"></span>
     </div>
+    <div class="font-display" style="font-family: 'LXGW WenKai KR','Last Resort';">
+        [K] LXGW WenKai KR | <span id="fontWk"></span>
+    </div>
+    <div class="font-display" style="font-family: 'Pengli WenKai','Last Resort';">
+        [G] Pengli WenKai | <span id="fontPl"></span>
+    </div>
+    <div class="font-display" style="font-family: 'ChisugaShotai','Last Resort';">
+        [J] ChisugaShotai | <span id="fontCs"></span>
+    </div>
+    <div class="font-display" style="font-family: 'ChienChia F','Last Resort';">
+        [V|I] ChienChia | <span id="fontCc"></span>
+    </div>
     <div class="font-display" style="font-family: 'YShiNewPen-Shuti','Last Resort';">
         [I] YShiNewPen-Shuti | <span id="fontYs"></span>
     </div>
@@ -94,9 +106,6 @@
     <div class="font-display" style="font-family: 'JyunsaiKaai','Last Resort';">
         [H] JyunsaiKaai | <span id="fontJy"></span>
     </div>
-    <div class="font-display" style="font-family: 'Pengli WenKai','Last Resort';">
-        [G] Pengli WenKai | <span id="fontPl"></span>
-    </div>
     <div class="font-display" style="font-family: 'BR Wakaisho','Last Resort';">
         [A] BR Wakaisho | <span id="fontWa"></span>
     </div>
@@ -113,7 +122,7 @@
         [G] PlanKai SC | <span id="fontPg"></span>
     </div>
     <div class="font-display" style="font-family: 'ScriptwideKyokashoCJK-A','ScriptwideKyokashoCJK-B','Last Resort';">
-        [I] Scriptwide Kyokasho CJK | <span id="fontSc"></span>
+        [K|I] Scriptwide Kyokasho CJK | <span id="fontSc"></span>
     </div>
     <div class="font-display" style="font-family: 'LXGW ZhenKai GB','Last Resort';">
         [G] LXGW ZhenKai GB | <span id="fontZG"></span>
@@ -123,7 +132,7 @@
     </div>
     <hr>
     <p>This page is in the public domain. All fonts used are licensed under the OFL. See <a href="https://github.com/FishlandicFishy/cjk-utils">the GitHub repository</a>.</p>
-    <p><a href="https://github.com/orioncactus/pretendard">Pretendard (body font)</a> | <a href="https://github.com/unicode-org/last-resort-font">Last Resort (fallback font)</a> | <a href="https://fonts.google.com/specimen/Klee+One">Klee One</a> | <a href="https://github.com/lxgw/LxgwWenKai">LXGW WenKai</a> (<a href="https://github.com/lxgw/LxgwWenkaiTC">TC</a>, <a href="https://github.com/lxgw/LxgwWenkaiGB">GB</a>) | <a href="https://github.com/lxgw/LxgwZhenKai">LXGW ZhenKai</a> | <a href="https://github.com/lxgw/Pengli">Pengli</a> | <a href="https://github.com/Steve-Yuu/YshiPen-Shuti">YshiPen-Shuti</a> | <a href="https://github.com/GuiWonder/MoonStarsKai">Moon Stars Kai</a> | <a href="https://github.com/buwuzhengyedexiaoji/WenKai_MSARG">WenKai_MSARG</a> | <a href="https://github.com/ButTaiwan/iansui">Iansui</a> | <a href="https://github.com/ItMarki/jyunsaikaai">JyunsaiKaai</a> | <a href="https://github.com/BridgeRiver/BRWakaishotai">BR Wakaisho</a> | <a href="https://github.com/Des-Magmeta/PlanKai">PlanKai</a> | <a href="https://github.com/scriptwide-fonts/scriptwide-kyokasho-cjk">Scriptwide Kyokasho CJK</a></p>
+    <p><a href="https://github.com/orioncactus/pretendard">Pretendard (body font)</a> | <a href="https://github.com/unicode-org/last-resort-font">Last Resort (fallback font)</a> | <a href="https://fonts.google.com/specimen/Klee+One">Klee One</a> | <a href="https://github.com/lxgw/LxgwWenKai">LXGW WenKai</a> (<a href="https://github.com/lxgw/LxgwWenkaiTC">TC</a>, <a href="https://github.com/lxgw/LxgwWenkaiGB">GB</a>, <a href="https://github.com/lxgw/LxgwWenkaiKR">KR</a>) | <a href="https://github.com/lxgw/LxgwZhenKai">LXGW ZhenKai</a> | <a href="https://github.com/lxgw/Pengli">Pengli</a> | <a href="https://github.com/ChisugaMaeka/Chisuga-Shotai">ChisugaShotai</a> | <a href="https://github.com/Tsao-Tung/Chienchia">ChienChia</a> | <a href="https://github.com/Steve-Yuu/YshiPen-Shuti">YshiPen-Shuti</a> | <a href="https://github.com/GuiWonder/MoonStarsKai">Moon Stars Kai</a> | <a href="https://github.com/buwuzhengyedexiaoji/WenKai_MSARG">WenKai_MSARG</a> | <a href="https://github.com/ButTaiwan/iansui">Iansui</a> | <a href="https://github.com/ItMarki/jyunsaikaai">JyunsaiKaai</a> | <a href="https://github.com/BridgeRiver/BRWakaishotai">BR Wakaisho</a> | <a href="https://github.com/Des-Magmeta/PlanKai">PlanKai</a> | <a href="https://github.com/scriptwide-fonts/scriptwide-kyokasho-cjk">Scriptwide Kyokasho CJK</a></p>
     <script>
         const textInput = document.getElementById('textInput');
         const unicodeInput = document.getElementById('unicodeInput');
@@ -132,6 +141,7 @@
         const fontKlee = document.getElementById('fontKlee');
         const fontW = document.getElementById('fontW');
         const fontWt = document.getElementById('fontWt');
+        const fontWk = document.getElementById('fontWk');
         const fontWg = document.getElementById('fontWg');
         const fontWm = document.getElementById('fontWm');
         const fontWa = document.getElementById('fontWa');
@@ -149,6 +159,8 @@
         const fontPj = document.getElementById('fontPj');
         const fontPg = document.getElementById('fontPg');
         const fontSc = document.getElementById('fontSc');
+        const fontCc = document.getElementById('fontCc');
+        const fontCs = document.getElementById('fontCs');
 
         textInput.addEventListener('input', updateFonts);
         addCharButton.addEventListener('click', appendUnicodeChar);
@@ -158,6 +170,7 @@
             fontKlee.textContent = inputText;
             fontW.textContent = inputText;
             fontWt.textContent = inputText;
+            fontWk.textContent = inputText;
             fontWg.textContent = inputText;
             fontWm.textContent = inputText;
             fontWa.textContent = inputText;
@@ -175,6 +188,8 @@
             fontPj.textContent = inputText;
             fontPg.textContent = inputText;
             fontSc.textContent = inputText;
+            fontCc.textContent = inputText;
+            fontCs.textContent = inputText;
         }
         
         function appendUnicodeChar() {
